@@ -1,5 +1,7 @@
 
 {{$NEXT}}
+	- Fixed stupid bug
+	- Add option to consider tablets as mobile devices
 
 0.01      2013-02-24 19:40:13 Europe/Berlin
 	- Initial release
